# score-addon-puara

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  release.sh
.github/workflows/: builds.yaml
Puara/: AvalanchesAvnd.cpp  AvalanchesAvnd.hpp  Binarizer.cpp  Binarizer.hpp  BioDataHeart.cpp  BioDataHeart.hpp  BioDataSkinConductance.cpp  BioDataSkinConductance.hpp  ButtonAvnd.cpp  ButtonAvnd.hpp  Calibration.cpp  Calibration.hpp  ClusteringAvnd.cpp  ClusteringAvnd.hpp  CompassAvnd.cpp  CompassAvnd.hpp  CorrelationAvnd.cpp  CorrelationAvnd.hpp  ERPAvnd.cpp  ERPAvnd.hpp  EdaRtFeatures.cpp  EdaRtFeatures.hpp  GestureRecognizer.cpp  GestureRecognizer.hpp  Jab.cpp  Jab.hpp  Jab1D_Avnd.cpp  Jab1D_Avnd.hpp  Jab2D_Avnd.cpp  Jab2D_Avnd.hpp  Jab3D_Avnd.cpp  Jab3D_Avnd.hpp  LeakyIntegrator.hpp  LeakyIntegratorAvnd.cpp  LeakyIntegratorAvnd.hpp  Normalization.cpp  Normalization.hpp  PCAAvnd.cpp  PCAAvnd.hpp  PPAmplitude.cpp  (+38 more)
